--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
   "description": "",
   "main": "handler.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/mocha"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
+    "mocha": "^8.3.2",
     "sequelize-cli": "^6.2.0",
     "serverless-offline": "^6.9.0"
   },
   "dependencies": {
+    "lodash": "^4.17.21",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.6.2"
