--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "chai-as-promised": "^7.1.1",
     "mocha": "^8.3.2",
     "sequelize-cli": "^6.2.0",
-    "serverless-offline": "^6.9.0"
+    "serverless-offline": "^6.9.0",
+    "supertest": "^6.1.3"
   },
   "dependencies": {
+    "faker": "^5.5.3",
     "lodash": "^4.17.21",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
