--- a/src/config/config.json
+++ b/src/config/config.json
@@ -14,10 +14,10 @@
     "dialect": "postgres"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
+    "username": "postgres",
+    "password": "episuns4my",
+    "database": "sweatworks_db_prod",
+    "host": "database-2.cpj8eil7pxeu.us-east-2.rds.amazonaws.com",
     "dialect": "postgres"
   }
 }
